Check if Lifeless and Arid Lifeless are in the correct categories
Rework hab categories like Desertic
Make Jungle worlds a swap as to not inflate the sector with Jungles (and Eccentric has actually decent odds of spawning) might not be needed
Swap some icons for military base (maybe)
Investigate the restoration of new procgen rings
Organics on Methane

TODO Hycean
Current progress:
Planet spec is done
Condition pool framework is done

What's next:
Configure condition weights
Actual proc gen with proper spawn rates
Description
Check if vanilla market images in a special way for Water worlds.
Check how Ind.Evo spawns conditions (depending on the system used to spawn the planet)

W.I.P. 1.1.0   [date]
- Minor text fixes.
- Externalized table strings.
- Tables now show which stat is scaling.
- Planetary conditions (Artificial, Magnetic, Windswept) are now always the rightmost.
- Buffed Military Virus:
   . Weapon production is now +4 (was +3).
   . Ground defense is now -40% (was -50%).
   . Population growth is now (colony size + 1) * -2 (was colony size * -3).
- Unique conditions (Shrooms, Spores, Virus) will now prevent other US special conditions from spawning (planetary conditions and crystals are unaffected).
- Fixed a rare bug that caused Decivilized to spawn without ruins on gas giants with Floating Continent.

1.0.11   26/04/2024
- Added an expandable tooltip to conditions with scaling that shows the strength of the effect at the various market sizes.
- Conditions that scale with market size now have a scaling cap:
   . Markets of size 2 and lower will always have the size 3 effect.
   . Markets of size 7 and higher will always have the size 6 effect.
- Added the vanilla condition images used by the mod to the files in case they get removed in the future.
- Unique planets and conditions can no longer spawn on the Planet Killer and Planetary Shield planets.
- Unique planets now have the proper TypeId.
- Minor text rewording.
- Added a new easter egg name.
